--- a/ChickCheck/Localizable.xcstrings
+++ b/ChickCheck/Localizable.xcstrings
@@ -41,6 +41,22 @@
         }
       }
     },
+    "cancel" : {
+      "localizations" : {
+        "cs" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Zrušit"
+          }
+        },
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Cancel"
+          }
+        }
+      }
+    },
     "date" : {
       "localizations" : {
         "cs" : {
@@ -133,22 +149,6 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Do you wish to delete this record?"
-          }
-        }
-      }
-    },
-    "delete_statistics" : {
-      "localizations" : {
-        "cs" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "Smazat statistiky"
-          }
-        },
-        "en" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "Delete statistics"
           }
         }
       }
