--- a/ChickCheck/Localizable.xcstrings
+++ b/ChickCheck/Localizable.xcstrings
@@ -42,6 +42,7 @@
       }
     },
     "cancel" : {
+      "extractionState" : "stale",
       "localizations" : {
         "cs" : {
           "stringUnit" : {
